@@ -79,3 +79,4 @@ void VectorTypedParameterHandler<T>::setPlugValue()
 template class VectorTypedParameterHandler<int>;
 template class VectorTypedParameterHandler<float>;
 template class VectorTypedParameterHandler<std::string>;
+template class VectorTypedParameterHandler<Imath::V3f>;
